# CodeRunner

./: .gitignore  CMakeLists.txt  INSTALLATION.md  README.md  build.bat  build.sh
docs/: PHASE2_DETAILS.md  PHASE3_DETAILS.md  PHASE4_STATUS.md  PHASES.md
src/: breakpointpanel.cpp  breakpointpanel.h  callstackpanel.cpp  callstackpanel.h  codeeditor.cpp  codeeditor.h  compiler.cpp  compiler.h  compiler_output_feeder.cpp  compiler_output_integration.cpp  compileroutputpanel.cpp  compileroutputpanel.h  compilersettingsdialog.cpp  compilersettingsdialog.h  debugconsole.cpp  debugconsole.h  debugger.cpp  debugger.h  debugger_structs.h  errorparser.cpp  errorparser.h  filemanager.cpp  filemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  miparser.cpp  miparser.h  projectconfig.cpp  projectconfig.h  resources.qrc  variablespanel.cpp  variablespanel.h
src/styles/: dark.qss  light.qss
